# pbdPAPI

./: .Rbuildignore  .gitignore  BUGS  ChangeLog  DESCRIPTION  LICENSE  NAMESPACE  README  README.md  TODO  cleanup  configure  configure.ac  redocument  reipcm  repapi
R/: cache.r  cachebench.r  characterize.r  counter_avail.r  envir.r  epc.r  flips.r  flops.r  flopsbench.r  hw_info.r  idle.r  init.r  ipc.r  ipcm.r  mips.r  ncounters.r  papi_avail.r  papi_cache.r  papi_check.r  papi_event.r  papi_example.r  papi_flips.r  papi_flops.r  papi_idle.r  papi_init.r  papiexport.r  pbdPAPI-package.r  plot_grid_plotter.r  plots.r  print.r  procutil.r  stall.r  utilization.r  utils.r  whichlib.r  whichlib.r.in  zzz.r
data/: envir.r
demo/: 00Index  cache.r  cache_access.r  event.r  fillmat.r  flops.r  inner.r  kmeans.r  matprod.r  pca.r  regression.r  sort.r
inst/: CITATION
inst/doc/: pbdPAPI-guide.Rnw
man/: 00-pbdPAPI-package.Rd  aa-event.Rd  aa-flips.Rd  aa-flops.Rd  aa-lowlevel.Rd  ab-envir.Rd  ba-lowlevel.Rd  ca_hwinfo.Rd  cachebench.Rd  da-flips.Rd  db-flops.Rd  dc-ipc.Rd  dc-utilization.Rd  dz_epc.Rd  event.Rd  fa-cache.Rd  fb-ipcm.Rd  flopsbench.Rd  ga-idle.Rd  ha-cpuormem.Rd  hw.info.Rd  ipcm.cache.Rd  lowlevel.Rd  papiexport.Rd  pbdPAPI-Global-Environment.Rd  pbdPAPI-package.Rd  plot.Rd  print-cachebench.Rd  print.Rd  sub-.papi_output.Rd  system.cache.Rd  system.cpuormem.Rd  system.epc.Rd  system.flips.Rd  system.flops.Rd  system.idle.Rd  system.ncounters.Rd  system.utilization.Rd  zz_internal.Rd
src/: CMakeLists.txt  Makefile  Makefile.org  Makevars.in  Makevars.win  avail.c  build_papi.in  cache.c  cache_fine.c  cache_misses.c  check.c  counters.c  epc.c  events.c  example.c  flips.c  flops.c  hwinfo.c  init.c  ipc.c  mips.c  papi_error.c  pbdPAPI.h  setret.c  style.sh  utilization.c
src/libcipcm/: CoreMakefile  IPCM.patch  Makefile  cwrap.cpp  cwrap.h  fake_papi.cpp  test.c
src/libcipcm/IntelPerformanceCounterMonitorV2.6/: client_bw.cpp  client_bw.h  cpucounters.cpp  cpucounters.h  cpucounterstest.cpp  msr.h  pci.cpp  pcm-memory.cpp  pcm-msr.cpp  pcm-numa.cpp  pcm-power.cpp  pcm-tsx.cpp  types.h  utils.h  width_extender.h
src/libcipcm/IntelPerformanceCounterMonitorV2.6/MacMSRDriver/: PCIDriverInterface.cpp
src/libcipcm/IntelPerformanceCounterMonitorV2.6/MacMSRDriver/PcmMsr/: PcmMsr.cpp  PcmMsrClient.cpp
src/libcipcm/IntelPerformanceCounterMonitorV2.6/PCM_Win/: pcm.vcproj
src/libcipcm/ipcm-2.6/: .bdsignore.all  Makefile  WINDOWS_HOWTO.rtf  client_bw.cpp  client_bw.h  cpuasynchcounter.h  cpucounters.h  ipcm_windef.h  msr.cpp  pci.h  pcm-pcie.cpp  pcm-power.cpp  pcm-sensor.cpp  pcm-tsx.cpp  width_extender.h
src/libcipcm/ipcm-2.6/Intelpcm.dll/: Intelpcm.dll.vcproj
src/libcipcm/ipcm-2.6/MacMSRDriver/: DriverInterface.c  DriverInterface.h  MSRAccessor.cpp  Makefile
src/libcipcm/ipcm-2.6/MacMSRDriver/PcmMsr/: PcmMsrClient.h  UserKernelShared.h
src/libcipcm/ipcm-2.6/MacMSRDriver/PcmMsr.xcodeproj/: project.pbxproj
src/libcipcm/ipcm-2.6/PCM-MSR_Win/: pcm-msr-win.vcproj
src/libcipcm/ipcm-2.6/PCM-NUMA_Win/: pcm-numa-win.vcproj
src/libcipcm/ipcm-2.6/PCM-PCIE_Win/: pcm-pcie-win.vcproj
src/libcipcm/ipcm-2.6/PCM-TSX_Win/: pcm-tsx-win.vcproj
src/libcipcm/ipcm-2.6/PCM_Win/: ReadMe.txt  pcm.cpp  stdafx.cpp  windriver.h
src/libcipcm/ipcm-2.6/winring0/: OlsApi.h
src/papi-5.3.0/src/: Makefile  config.h  config.h.in  configure  fpapi.h  out.txt  reconf
src/papi-5.3.0/src/autom4te.cache/: output.0  requests  traces.0  traces.1
src/papi-5.3.0/src/components/: Makefile_comp_tests.target
src/papi-5.3.0/src/components/lustre/: linux-lustre.c
src/papi-5.3.0/src/ctests/: Makefile.target  mpifirst
src/papi-5.3.0/src/ftests/: Makefile.target
src/papi-5.3.0/src/include/: f77papi.h  f90papi.h
src/papi-5.3.0/src/lib/: libpapi.so.5.3.0  libpapi.so.5.3.0.0  libpfm.so.4  libpfm.so.4.4.0
src/papi-5.3.0/src/testlib/: Makefile.target
src/papi-5.3.2/src/libcipcm/: CoreMakefile  Makefile  TODO  cwrap.cpp  cwrap.h  test.c
src/papi-5.3.2/src/libcipcm/IntelPerformanceCounterMonitorV2.6/: cpucounters.cpp  cpucounters.h  cpucounterstest.cpp  gen_new_win_project.sh  pci.h  pcm-numa.cpp  pcm-pcie.cpp  types.h
src/papi-5.3.2/src/libcipcm/IntelPerformanceCounterMonitorV2.6/PCM-Memory_Win/: pcm-memory-win.vcproj
src/papi-5.3.2/src/libcipcm/IntelPerformanceCounterMonitorV2.6/PCM-Power_Win/: pcm-power-win.vcproj
src/papi-5.3.2/src/testlib/: Makefile
src/papi-5.4.1/src/: papi.pc
tests/: papi.event.init.r
vignettes/: build_pdf.sh  pbdPAPI-guide.Rnw
vignettes/cover/: Rhino5.xcf  build_cover.sh  cover.tex
vignettes/include/: 00-acknowledgement.tex  00-copyright.tex  01-introduction.tex  02-installation.tex  03-background.tex  03-counters.tex  04-interface.tex  05-examples.tex  05-examples.tex.backup  06-addendum.tex  06-addendum.tex.backup  pbdPAPI.bib  preamble.tex
